Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-1092

generated validate() method has wrong indentation

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • 0.6
    • 0.7
    • Python - Compiler
    • None
    • Patch Available

    Description

      The generated validate() method is indented to the wrong level, making it an internal/unusable method inside the write() method of a struct

      Looks like the line to generate the validator just needs to move down a couple lines, past an indent_down() call. I have a patch that fixes this.

      Attachments

        Activity

          People

            willp Will Pierce
            willp Will Pierce
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: